erased .idea from index

--- a/geostats/src/main/res/menu/menu_continents.xml
+++ b/geostats/src/main/res/menu/menu_continents.xml
@@ -3,6 +3,6 @@
 		android:id="@+id/menu_oceans"
 		android:title="@string/Oceans"
 		android:orderInCategory="1"
-		android:showAsAction="always"/>
+		android:showAsAction="ifRoom"/>
 
 </menu>
