disabled menus in actionbar

--- a/geostats/src/main/res/menu/menu_indicators.xml
+++ b/geostats/src/main/res/menu/menu_indicators.xml
@@ -1,8 +1,9 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:com.geo.geostats="http://schemas.android.com/apk/res-auto">
 	<item
 		android:id="@+id/menu_indicators"
 		android:title="@string/Indicators"
 		android:orderInCategory="1"
-		android:showAsAction="always"/>
+        com.geo.geostats:showAsAction="ifRoom"/>
 
 </menu>
