--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
     <color name="colorCCC">#CCC</color>
     <color name="colorDarkGrey">#616161</color>
     <color name="color000">#000</color>
+    <color name="colorDarkGreyActionBar">#606060</color>
+    <color name="colorShadow">#f3f3f3</color>
 
     <style name="FullScreen" parent="Theme.AppCompat">
         <item name="android:windowFullscreen">true</item>
@@ -18,13 +20,52 @@
     <style name="Theme.PageIndicatorDefaults" parent="@style/Theme.AppCompat">
         <item name="vpiIconPageIndicatorStyle">@style/Widget.IconPageIndicator</item>
         <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
+
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="actionBarTabBarStyle">@style/MyActionBarTabBarStyle</item>
+        <item name="actionBarTabStyle">@style/MyActionBarTabStyle</item>
+        <item name="actionBarTabTextStyle">@style/MyActionBarTabTextStyle</item>
+
+        <item name="homeAsUpIndicator">@drawable/my_abc_ic_ab_back_holo_light</item>
+    </style>
+
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="background">@drawable/bg_actionbar</item>
+        <item name="backgroundStacked">@drawable/bg_actionbar</item>
+        <item name="backgroundSplit">@drawable/bg_actionbar</item>
+        <item name="titleTextStyle">@style/TitleTextStyle</item>
+    </style>
+    <style name="MyActionBarTabBarStyle" parent="@style/Widget.AppCompat.ActionBar.TabBar">
+        <item name="background">@drawable/bg_actionbar_tabview2</item>
+        <item name="divider">@drawable/bg_actionbar_divider</item>
+        <item name="dividerPadding">0dp</item>
+    </style>
+    <style name="MyActionBarTabStyle" parent="@style/Widget.AppCompat.Light.ActionBar.TabView">
+
+    </style>
+    <style name="MyActionBarTabTextStyle" parent="@style/Widget.AppCompat.Light.ActionBar.TabText">
+        <item name="android:textColor">@color/colorDarkGreyActionBar</item>
+        <item name="android:shadowColor">@color/colorShadow</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">0</item>
+    </style>
+    <style name="TitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/colorDarkGreyActionBar</item>
+        <item name="android:shadowColor">@color/colorShadow</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">0</item>
     </style>
 
     <style name="RelativeLayoutBody">
-        <item name="android:background">@color/colorFFF</item>
+        <item name="android:background">@drawable/bg_body_pattern</item>
+        <item name="android:padding">8dp</item>
     </style>
     <style name="FrameLayoutBody">
-        <item name="android:padding">5dp</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:background">@drawable/bg_content</item>
     </style>
 
     <style name="TableLayout">
@@ -121,7 +162,6 @@
     <style name="ButCloseDialog">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:text"></item>
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:background">@drawable/navigation_cancel</item>
@@ -141,5 +181,6 @@
         <item name="android:layout_height">fill_parent</item>
         <item name="android:scaleType">centerInside</item>
     </style>
+
 
 </resources>
