--- a/geostats/src/main/res/layout-land/main.xml
+++ b/geostats/src/main/res/layout-land/main.xml
@@ -12,9 +12,10 @@
         android:background="@drawable/abc_ic_go"
         android:layout_alignParentRight="true"/>
     
-	  <RelativeLayout
+	  <LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
+        android:orientation="horizontal"
 		android:gravity="center">
 
             <Button
@@ -26,26 +27,21 @@
                 android:text="@string/Oceans"
                 style="@style/MainButtons"
                 android:id="@+id/btOceans"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@+id/btContinents"/>
+                android:layout_marginLeft="20dp"/>
 
           <Button
               android:text="@string/Branches"
               style="@style/MainButtons"
               android:id="@+id/btBranches"
-              android:layout_marginTop="20dp"
-              android:layout_below="@+id/btContinents"/>
+              android:layout_marginLeft="20dp"/>
 
             <Button
                 android:text="@string/Indicators"
                 style="@style/MainButtons"
                 android:id="@+id/btIndicators"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@+id/btOceans"
-                android:layout_toRightOf="@+id/btBranches"/>
+                android:layout_marginLeft="20dp"/>
 
-		</RelativeLayout>
+		</LinearLayout>
 </RelativeLayout>
 
 
