--- a/geostats/src/main/res/layout/info_references.xml
+++ b/geostats/src/main/res/layout/info_references.xml
@@ -2,14 +2,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/RelativeLayoutBody"
     android:orientation="vertical" >
-    
-	<TextView 
+
+	<TextView
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:id="@+id/tvInfoRefs"
-	    android:textColor="#000"
+        style="@style/FrameLayoutBody"
 	    android:textIsSelectable="true"
 	    android:text=""/>
-    
+
 </ScrollView>
