--- a/geostats/src/main/res/layout-land/vp_europe_population.xml
+++ b/geostats/src/main/res/layout-land/vp_europe_population.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ScrollView">
-
+    
 	<TableLayout style="@style/TableLayout"
 	    android:shrinkColumns="0">
 	    
@@ -30,19 +30,23 @@
 		         style="@style/TableTextView.GravityRight"
 		         android:text="@string/DensitySqKmRecordEurope"/>
 		 </TableRow>
-		 <TableRow style="@style/TableRow.Span">
+		 <TableRow style="@style/TableRow">
+             <TextView
+                 style="@style/TableTextView"
+                 android:text="@string/MostPopulatedCountries"/>
 		     <Button 
-		      style="@style/TableTextView"
-		      android:text="@string/MostPopulatedCountries"
-		      android:layout_span="2"
-		      android:id="@+id/btDialog3"/>
+                  style="@style/TableTextView.GravityRight.Button"
+                  android:text="@string/ViewTable"
+                  android:id="@+id/btDialog3"/>
 		 </TableRow>
-		 <TableRow style="@style/TableRow.Span">
+		 <TableRow style="@style/TableRow">
+             <TextView
+                 style="@style/TableTextView"
+                 android:text="@string/MostPopulatedEUCountries"/>
 		     <Button 
-		      style="@style/TableTextView"
-		      android:text="@string/MostPopulatedEUCountries"
-		      android:layout_span="2"
-		      android:id="@+id/btDialog4"/>
+		          style="@style/TableTextView.GravityRight.Button"
+                  android:text="@string/ViewTable"
+                  android:id="@+id/btDialog4"/>
 		 </TableRow>
 	</TableLayout>
 </ScrollView>
