--- a/geostats/src/main/res/layout/vp_asia_population.xml
+++ b/geostats/src/main/res/layout/vp_asia_population.xml
@@ -30,12 +30,14 @@
 		         style="@style/TableTextView.GravityRight"
 		         android:text="@string/DensitySqKmRecordAsia"/>
 		 </TableRow>
-		 <TableRow style="@style/TableRow.Span">
+		 <TableRow style="@style/TableRow">
+             <TextView
+                 style="@style/TableTextView"
+                 android:text="@string/MostPopulatedCountries"/>
 		     <Button 
-		      style="@style/TableTextView"
-		      android:text="@string/MostPopulatedCountries"
-		      android:layout_span="2"
-		      android:id="@+id/btDialog1"/>
+                  style="@style/TableTextView.GravityRight.Button"
+                  android:text="@string/ViewTable"
+                  android:id="@+id/btDialog1"/>
 		 </TableRow>
 	</TableLayout>
 </ScrollView>
