--- a/geostats/src/main/res/layout/vp_europe_countries.xml
+++ b/geostats/src/main/res/layout/vp_europe_countries.xml
@@ -5,27 +5,24 @@
 
     <TableLayout style="@style/TableLayout"
         android:shrinkColumns="0">
-    	<TableRow style="@style/TableRow">
-	        <TextView 
-	          	style="@style/TableTextView"
-	            android:text="@string/NumberOfCountries"/>
-	        <TextView 
-	            style="@style/TableTextView.GravityRight"
-	            android:text="@string/NumberOfCountriesRecordEurope"/>
+	    <TableRow style="@style/TableRow">
+            <TextView
+                style="@style/TableTextView"
+                android:text="@string/LargestCountries"/>
+            <Button
+                style="@style/TableTextView.GravityRight.Button"
+                android:text="@string/ViewTable"
+                android:id="@+id/btDialog"/>
+
 	    </TableRow>
-	    <TableRow style="@style/TableRow.Span">
-	        <Button 
-		        style="@style/TableTextView"
-		        android:text="@string/LargestCountries"
-		        android:layout_span="2"
-		        android:id="@+id/btDialog"/>
-	    </TableRow>
-	     <TableRow style="@style/TableRow.Span">
-	        <Button 
-		        style="@style/TableTextView"
-		        android:text="@string/LargestEUCountries"
-		        android:layout_span="2"
-		        android:id="@+id/btDialog2"/>
+	     <TableRow style="@style/TableRow">
+             <TextView
+                 style="@style/TableTextView"
+                 android:text="@string/LargestEUCountries"/>
+             <Button
+                 style="@style/TableTextView.GravityRight.Button"
+                 android:text="@string/ViewTable"
+                 android:id="@+id/btDialog2" />
 	    </TableRow>
 	</TableLayout>
 </ScrollView>
